test/src/e2e_vm_tests/test_programs/should_pass/language/test_multiple_attributes/src/main.sw
library;

#[test, inline(always)]
fn foo() {}
