test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/module_kind.sw
#[storage(invalid)]
#[inline(invalid)]
#[test(invalid)]
/// Invalid outer comment.
#[payable(invalid)]
#[allow(invalid)]
#[cfg(invalid)]
#[deprecated(invalid)]
#[fallback(invalid)]
#[error_type(invalid)]
#[error(invalid)]
library;
